tests/algorithms/transpiler/FS/greedy_methods/gas_station.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/algorithms/transpiler/FS/greedy_methods/gas_station.fs(72,54): error FS0001: The type 'GasStation' does not support a conversion to the type 'int'

/workspace/mochi/tests/algorithms/transpiler/FS/greedy_methods/gas_station.fs(72,67): error FS0039: The field, constructor or member 'Item' is not defined

/workspace/mochi/tests/algorithms/transpiler/FS/greedy_methods/gas_station.fs(73,56): error FS0001: The type 'GasStation' does not support a conversion to the type 'int'

/workspace/mochi/tests/algorithms/transpiler/FS/greedy_methods/gas_station.fs(73,69): error FS0039: The field, constructor or member 'Item' is not defined

/workspace/mochi/tests/algorithms/transpiler/FS/greedy_methods/gas_station.fs(83,45): error FS0039: The field, constructor or member 'Item' is not defined

/workspace/mochi/tests/algorithms/transpiler/FS/greedy_methods/gas_station.fs(83,84): error FS0039: The field, constructor or member 'Item' is not defined
